strappy: fixing blog layout issues
- display missing toolbar to add new posts
- css

https://trello.com/c/QNAChd5u/1341-strappy-layout

--- a/app/assets/stylesheets/strappy_layout.sass
+++ b/app/assets/stylesheets/strappy_layout.sass
@@ -56,3 +56,17 @@ body.strappy-layout
   .box.first p:first-of-type
     font-size: 1.25rem
     font-weight: 300
+
+  .blog_post_teaser_col
+    .box.first
+      background: transparent
+      padding: 0
+      p:first-of-type
+        font-size: 1rem
+        font-weight: normal
+    h1, h2, h3, h4, h5, h6
+      font-size: 1.3em
+    .box_header h1
+      font-size: 1.9em
+    .box_image
+      margin-bottom: 0.8em
